--- a/src/application/UIDashboard.fxml
+++ b/src/application/UIDashboard.fxml
@@ -60,12 +60,19 @@
                                           </MenuBar>
                                        </top>
                                        <left>
-                                          <ImageView fitHeight="74.0" fitWidth="67.0" onMouseClicked="#previous" pickOnBounds="true" preserveRatio="true" BorderPane.alignment="CENTER">
+                                          <ImageView fitHeight="70.0" fitWidth="60.0" onMouseClicked="#previous" pickOnBounds="true" preserveRatio="true" BorderPane.alignment="CENTER">
                                              <image>
                                                 <Image url="@../../assets/left-arrow.png" />
                                              </image>
                                           </ImageView>
                                        </left>
+                                       <right>
+                                          <ImageView fitHeight="70.0" fitWidth="60.0" onMouseClicked="#next" pickOnBounds="true" preserveRatio="true" BorderPane.alignment="CENTER">
+                                             <image>
+                                                <Image url="@../../assets/right-arrow.png" />
+                                             </image>
+                                          </ImageView>
+                                       </right>
                                     </BorderPane>
                                  </children>
                               </AnchorPane>
