--- a/src/application/UIHome.fxml
+++ b/src/application/UIHome.fxml
@@ -51,11 +51,11 @@
             </AnchorPane>
          </center>
          <bottom>
-            <TableView fx:id="lastProject" prefHeight="280.0" prefWidth="600.0" BorderPane.alignment="CENTER">
+            <TableView fx:id="lastProject" onMouseClicked="#clickItem" prefHeight="280.0" prefWidth="600.0" BorderPane.alignment="CENTER">
               <columns>
-                <TableColumn fx:id="projectName" prefWidth="124.0" text="Name" />
-                <TableColumn fx:id="projectPath" prefWidth="354.0" text="Project path" />
-                  <TableColumn fx:id="projectDate" minWidth="0.0" prefWidth="121.0" text="Last edit" />
+                <TableColumn fx:id="projectName" editable="false" prefWidth="124.0" sortable="false" text="Name" />
+                <TableColumn fx:id="projectPath" editable="false" prefWidth="354.0" sortable="false" text="Project path" />
+                  <TableColumn fx:id="projectDate" editable="true" minWidth="0.0" prefWidth="121.0" sortType="DESCENDING" text="Last edit" />
               </columns>
                <columnResizePolicy>
                   <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
