--- a/bin/application/UIHome.fxml
+++ b/bin/application/UIHome.fxml
@@ -23,7 +23,7 @@
                 </Menu>
                 <Menu mnemonicParsing="false" text="Edit">
                   <items>
-                    <MenuItem mnemonicParsing="false" text="Delete" />
+                    <MenuItem mnemonicParsing="false" onAction="#clearHistoric" text="Clear historic" />
                   </items>
                 </Menu>
                 <Menu mnemonicParsing="false" text="Help">
