--- a/bin/application/UIHome.fxml
+++ b/bin/application/UIHome.fxml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 
@@ -37,16 +36,8 @@
          <center>
             <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
                <children>
-                  <ImageView fitHeight="183.0" fitWidth="180.0" layoutX="317.0" layoutY="48.0" onMouseClicked="#openProject" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../open-folder-outline.png" />
-                     </image>
-                  </ImageView>
-                  <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="96.0" layoutY="63.0" onMouseClicked="#newProject" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../add-new-page.png" />
-                     </image>
-                  </ImageView>
+                  <Button layoutX="150.0" layoutY="135.0" mnemonicParsing="false" onMouseClicked="#newProject" text="New project..." />
+                  <Button layoutX="307.0" layoutY="135.0" mnemonicParsing="false" onMouseClicked="#openProject" text="Load an existing project" />
                </children>
             </AnchorPane>
          </center>
