--- a/src/application/UIDashboard.fxml
+++ b/src/application/UIDashboard.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Accordion?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
@@ -46,14 +47,14 @@
                                        <left>
                                           <ImageView fitHeight="70.0" fitWidth="60.0" onMouseClicked="#previous" pickOnBounds="true" preserveRatio="true" BorderPane.alignment="CENTER">
                                              <image>
-                                                <Image url="@../left-arrow.png" />
+                                                <Image url="@left-arrow.png" />
                                              </image>
                                           </ImageView>
                                        </left>
                                        <right>
                                           <ImageView fitHeight="70.0" fitWidth="60.0" onMouseClicked="#next" pickOnBounds="true" preserveRatio="true" BorderPane.alignment="CENTER">
                                              <image>
-                                                <Image url="@../right-arrow.png" />
+                                                <Image url="@right-arrow.png" />
                                              </image>
                                           </ImageView>
                                        </right>
@@ -83,6 +84,9 @@
                                             </menus>
                                           </MenuBar>
                                        </top>
+                                       <center>
+                                          <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onMouseClicked="#view16" text="Load images" BorderPane.alignment="CENTER" />
+                                       </center>
                                     </BorderPane>
                                  </children>
                               </AnchorPane>
