--- a/bin/application/UIDashboard.fxml
+++ b/bin/application/UIDashboard.fxml
@@ -26,7 +26,7 @@
 							<items>
 								<MenuItem mnemonicParsing="false" onAction="#newProject" text="New" />
 								<MenuItem mnemonicParsing="false" onAction="#saveProject" text="Save" />
-								<MenuItem mnemonicParsing="false" onAction="#openProject" text="Open" />
+								<MenuItem mnemonicParsing="false" onAction="#saveAsProject" text="Save As" />
 								<MenuItem mnemonicParsing="false" onAction="#loadImages" text="Load images" />
 							</items>
 						</Menu>
@@ -60,13 +60,6 @@
 										<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
 											<children>
 												<BorderPane fx:id="table" layoutX="143.0" layoutY="68.0" prefHeight="383.0" prefWidth="572.0" style="-fx-background-color: #454545;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-													<right>
-														<ImageView fitHeight="70.0" fitWidth="60.0" onMouseClicked="#next" pickOnBounds="true" preserveRatio="true" BorderPane.alignment="CENTER">
-															<image>
-																<Image url="@right-arrow.png" />
-															</image>
-														</ImageView>
-													</right>
 													<top>
 														<MenuBar style="-fx-background-color: #626262;" BorderPane.alignment="CENTER">
 															<menus>
@@ -104,12 +97,12 @@
                                        <left>
                                           <Pane prefHeight="512.0" prefWidth="70.0" BorderPane.alignment="CENTER">
                                              <children>
-      														<ImageView fitHeight="70.0" fitWidth="60.0" layoutX="14.0" layoutY="226.0" onMouseClicked="#previous" pickOnBounds="true" preserveRatio="true">
+      														<ImageView fitHeight="50.0" fitWidth="50.0" layoutX="10.0" layoutY="226.0" onMouseClicked="#previous" pickOnBounds="true" preserveRatio="true">
       															<image>
-      																<Image url="@left-arrow.png" />
+      																<Image url="@chevron-sign-left.png" />
       															</image>
       														</ImageView>
-                                                <ImageView fx:id="backFolder" fitHeight="50.0" fitWidth="50.0" layoutX="10.0" layoutY="10.0" onMouseClicked="#backFolder" pickOnBounds="true" preserveRatio="true">
+                                                <ImageView fx:id="backFolder" fitHeight="50.0" fitWidth="50.0" layoutX="10.0" layoutY="10.0" onMouseClicked="#backFolder" pickOnBounds="true" preserveRatio="true" visible="false">
                                                    <image>
                                                       <Image url="@folder.png" />
                                                    </image>
@@ -117,6 +110,17 @@
                                              </children>
                                           </Pane>
                                        </left>
+                                       <right>
+                                          <Pane prefHeight="512.0" prefWidth="70.0" BorderPane.alignment="CENTER">
+                                             <children>
+      														<ImageView fitHeight="50.0" fitWidth="50.0" layoutX="10.0" layoutY="226.0" onMouseClicked="#next" pickOnBounds="true" preserveRatio="true" rotate="180.0">
+      															<image>
+      																<Image url="@chevron-sign-left.png" />
+      															</image>
+      														</ImageView>
+                                             </children>
+                                          </Pane>
+                                       </right>
 												</BorderPane>
 											</children>
 										</AnchorPane>
